Add mount namespace support 添加挂载命名空间支持 (#2909)

--- a/kernel/Kbuild
+++ b/kernel/Kbuild
@@ -17,6 +17,7 @@ kernelsu-objs += lsm_hooks.o
 kernelsu-objs += kernel_compat.o
 kernelsu-objs += kernel_umount.o
 kernelsu-objs += supercalls.o
+kernelsu-objs += su_mount_ns.o
 kernelsu-objs += feature.o
 kernelsu-objs += throne_tracker.o
 kernelsu-objs += ksud.o
